Support better the dark themes
@aleb
Submitted by Alexandru Băluț Link to original bug (#769704)
Description
Created attachment 333063 Unclear ratings chart
The colors of the bars in the ratings chart should not be hardcoded. See the attached screenshot to see how it looks in Adwaita dark, gives the impression only bad ratings have been given.