Support better the dark themes

Tweak colors and CSS styles to better match the system theme.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/80
Closes https://gitlab.gnome.org/GNOME/gnome-software/-/merge_requests/511